unpackaged/main/default/objects/Routing_Rule__c/Routing_Rule__c.object-meta.xml
<CustomObject>
    <label>Routing Rule</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Routing Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>