unpackaged/main/default/objects/Routing_Rule__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada Bell Late Requests</fullName>
            </value>
            <value>
                <fullName>Canada - Business Support</fullName>
            </value>
            <value>
                <fullName>Canada - FTTP Locates</fullName>
            </value>
            <value>
                <fullName>Canada - GTT BIR</fullName>
            </value>
            <value>
                <fullName>Canada - Locates Support</fullName>
            </value>
            <value>
                <fullName>Canada - Projects</fullName>
            </value>
            <value>
                <fullName>Canada - Quote</fullName>
            </value>
            <value>
                <fullName>Canada - Radiant Support</fullName>
            </value>
            <value>
                <fullName>Canada - Regional Manager Requests</fullName>
            </value>
            <value>
                <fullName>Canada - Rogers</fullName>
            </value>
            <value>
                <fullName>Canada - Shaw Support</fullName>
            </value>
            <value>
                <fullName>Canada - Travel Request</fullName>
            </value>
            <value>
                <fullName>Canada - Zayo Canada Support</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Comcast Quotes</fullName>
            </value>
            <value>
                <fullName>Telus</fullName>
            </value>
            <value>
                <fullName>US - Charter Spectrum</fullName>
            </value>
            <value>
                <fullName>US - CSC Inbox</fullName>
            </value>
            <value>
                <fullName>US - Customer Update</fullName>
            </value>
            <value>
                <fullName>US - Infinera</fullName>
            </value>
            <value>
                <fullName>US - Locates</fullName>
            </value>
            <value>
                <fullName>US - Needs Quote</fullName>
            </value>
            <value>
                <fullName>US - PC&#39;s</fullName>
            </value>
            <value>
                <fullName>US - PMs</fullName>
            </value>
            <value>
                <fullName>US - Project</fullName>
            </value>
            <value>
                <fullName>US - Regional Manager Request</fullName>
            </value>
            <value>
                <fullName>US - Site Survey</fullName>
            </value>
            <value>
                <fullName>US - Tech Request</fullName>
            </value>
            <value>
                <fullName>US - Vendor Required</fullName>
            </value>
            <value>
                <fullName>US - Zayo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>