unpackaged/main/default/objects/Routing_Rule__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC Address</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>From Address</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>To Address</fullName>
            </value>
            <value>
                <fullName>Text Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>