unpackaged/main/default/objects/Routing_Rule__c/fields/Forwarding_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Email_Address__c</fullName>
    <label>Forwarding Email Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>