unpackaged/main/default/objects/Routing_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Does Not Contain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>