unpackaged/main/default/objects/Routing_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 HR MTTR</fullName>
            </value>
            <value>
                <fullName>24 HR MTTR</fullName>
            </value>
            <value>
                <fullName>4 HR MTTR</fullName>
            </value>
            <value>
                <fullName>ADMIN</fullName>
            </value>
            <value>
                <fullName>Best Effort</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Manager Request</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>MTTR</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Starbucks</fullName>
            </value>
            <value>
                <fullName>Taco Bell</fullName>
            </value>
            <value>
                <fullName>Travel Zone 1</fullName>
            </value>
            <value>
                <fullName>Travel Zone 2</fullName>
            </value>
            <value>
                <fullName>Travel Zone 3</fullName>
            </value>
            <value>
                <fullName>Travel Zone 4</fullName>
            </value>
            <value>
                <fullName>Travel Zone 5</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>US - Regional Manager Request</fullName>
            </value>
            <value>
                <fullName>US - Site Survey</fullName>
            </value>
            <value>
                <fullName>US - Tech Request</fullName>
            </value>
            <value>
                <fullName>US - Vendor Required</fullName>
            </value>
            <value>
                <fullName>US - Zayo</fullName>
            </value>
            <value>
                <fullName>VIASAT - PMs</fullName>
            </value>
            <value>
                <fullName>Viasat Sev 1</fullName>
            </value>
            <value>
                <fullName>Viasat Sev 2</fullName>
            </value>
            <value>
                <fullName>Viasat Sev 3</fullName>
            </value>
            <value>
                <fullName>Viasat Sev 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>