unpackaged/main/default/objects/Routing_Rule__c/fields/Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type__c</fullName>
    <label>Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Auto_Close</fullName>
            </value>
            <value>
                <fullName>Bell_Locates_Queue</fullName>
            </value>
            <value>
                <fullName>CBTS</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>CSCEmails</fullName>
            </value>
            <value>
                <fullName>Dispatcher_Queue_for_In_Jeopardy</fullName>
            </value>
            <value>
                <fullName>EmailQue</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>GeneralQueue</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>kywired_alarm_report</fullName>
            </value>
            <value>
                <fullName>LocatesQue</fullName>
            </value>
            <value>
                <fullName>MTTR</fullName>
            </value>
            <value>
                <fullName>Overflow</fullName>
            </value>
            <value>
                <fullName>Pending_Vendor_Scheduling</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Resource_Planning</fullName>
            </value>
            <value>
                <fullName>Service_Email</fullName>
            </value>
            <value>
                <fullName>Service_Phone</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Telus</fullName>
            </value>
            <value>
                <fullName>Tier2</fullName>
            </value>
            <value>
                <fullName>Valley_Fiber_Skill</fullName>
            </value>
            <value>
                <fullName>Vendor_Scheduled</fullName>
            </value>
            <value>
                <fullName>Viasat_PM</fullName>
            </value>
            <value>
                <fullName>Zayo</fullName>
            </value>
            <value>
                <fullName>ZayoMTTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>