unpackaged/main/default/objects/Routing_Rule__c/fields/Routing_Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>Routing_Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Routing Rule Group</label>
    <referenceTo>Routing_Rule_Group__c</referenceTo>
    <relationshipLabel>Routing Rules</relationshipLabel>
    <relationshipName>Routing_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>