unpackaged/main/default/objects/Routing_Rule__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Today</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Awaiting Quote</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Checked</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Customer Chatter</fullName>
            </value>
            <value>
                <fullName>Customer Escalated</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
            <value>
                <fullName>Escalated To Tier 2</fullName>
            </value>
            <value>
                <fullName>Escalation Resolved</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Internally Escalate</fullName>
            </value>
            <value>
                <fullName>Jeopardy</fullName>
            </value>
            <value>
                <fullName>Lift Required</fullName>
            </value>
            <value>
                <fullName>Locked On-Hold</fullName>
            </value>
            <value>
                <fullName>MTTR</fullName>
            </value>
            <value>
                <fullName>Needs To Be Scheduled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No Technicians Found</fullName>
            </value>
            <value>
                <fullName>Pending COI</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>SEV 1</fullName>
            </value>
            <value>
                <fullName>SEV 2</fullName>
            </value>
            <value>
                <fullName>SEV 3</fullName>
            </value>
            <value>
                <fullName>SEV 4</fullName>
            </value>
            <value>
                <fullName>SEV 5</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>