unpackaged/main/default/objects/Routing_Rule__c/fields/SubCustomer__c.field-meta.xml
<CustomField>
    <fullName>SubCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubCustomer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Routing Rules</relationshipLabel>
    <relationshipName>Routing_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>