unpackaged/main/default/objects/Routing_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Routing_Rule_Group__c</columns>
    <columns>NAME</columns>
    <columns>Criteria__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <columns>Active__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Forwarding_Email_Address__c</columns>
    <columns>Priority__c</columns>
    <columns>Queue_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>SubCustomer__c</columns>
    <columns>Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>